refactor: migrate manual mapping logic to MapStruct